test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_read_stmt.draco
proc main() void :  read(a); corp;
